nieuwe messages kunnen versturen en opslaan